--- a/src/index.css
+++ b/src/index.css
@@ -48,6 +48,28 @@ p, a, span,h3 {
   color: #7d7b7c
 }
 
+/*tablet*/
+@media (max-width: 1024px) {
+  h1 {
+      font-size: 3rem;
+      text-align: center;
+      }
 
+  h2 {
+      font-size: 1.8rem;
+      text-align: center;
+      }
+}
+/*móviles*/
+@media (max-width: 768px) {
+  h1 {
+      font-size: 2.5rem;
+      text-align: center;
+  }
 
+  h2 {
+      font-size: 1.4rem;
+      text-align: center;
+  }
 
+}
