--- a/src/styles/NavBar.module.css
+++ b/src/styles/NavBar.module.css
@@ -209,14 +209,17 @@ h3,
 @media (max-width: 768px) {
     .burger {
         display: flex;
-       
+
     }
 
     .navbar {
-        font-size: .2rem;
-        width: 800px;
-        height: fit-content;
-    }
+        width: 100%; 
+        height: auto;
+        flex-direction: column; 
+        align-items: center;
+        justify-content: flex-start;
+        gap: 15px; 
+        }
 
     .links {
         flex-direction: column;
