--- a/src/index.css
+++ b/src/index.css
@@ -48,7 +48,7 @@ p, a, span,h3 {
   color: #7d7b7c
 }
 
-/*tablet*/
+/*portátil*/
 @media (max-width: 1024px) {
   h1 {
       font-size: 3rem;
@@ -60,7 +60,7 @@ p, a, span,h3 {
       text-align: center;
       }
 }
-/*móviles*/
+/*tablet*/
 @media (max-width: 768px) {
   h1 {
       font-size: 2.5rem;
