--- a/src/styles/Inicio.module.css
+++ b/src/styles/Inicio.module.css
@@ -106,71 +106,54 @@
     font-size: 45px;
 }
 
-/*tablets*/
+/* Portátil */
 @media (max-width: 1024px) {
-    .info p {
-        font-size: 1.2rem;
-        margin-top: 20px;
-    }
-    .subtitulo {
-        font-size: 1.4rem;
-    }
-    .tratamientos {
-        margin-top: 50px;
-    }
-
-    .sobreMi {
-        gap: 40px;
-    }
-    .carta {
-        font-size: 1.4rem;
-    }
-    .pregunta {
-        font-size: 2.5rem;
-        text-align: center;
-        margin-top: 100px;
-    }
-    .saludo {
-        font-size: 2rem;
-    }
-
-    .imgsobremi{
+    .inicio {
+        height: 100vh;
+        background-size: cover;
         width: 100%;
-        height: auto;
-        display: block;
-        margin: 0 auto; 
-        }
-}
+    }
 
-/* móviles */
-@media (max-width: 768px) {
+    .info {
+        font-size: 18px;
+    }
+
     .info p {
-        font-size: 1rem;
+        font-size: 1.1rem;
         margin-top: 15px;
+        padding: 0 40px;
+        width: 100%;
     }
 
     .subtitulo {
-        font-size: 1.2rem;
+        font-size: 1.3rem;
+        text-align: center;
+        padding: 0 40px;
     }
 
     .tratamientos {
-        margin-top: 30px;
-    }
-
-    .sobreMi {
+        display: flex;
         flex-direction: column;
-        gap: 30px;
+        align-items: center;
+        margin-top: 40px;
+        gap: 20px;
+        padding: 0 40px;
     }
 
-    .carta {
-        font-size: 1.2rem;
-        text-align: center;
+    .link {
+        width: 80%;
+        margin: 0 auto;
+        padding: 12px;
+        display: flex;
+        align-items: center;
+        flex-direction: column;
     }
 
     .pregunta {
-        font-size: 2rem;
+        font-size: 2.2rem;
         text-align: center;
-        margin-top: 60px;
+        margin-top: 80px;
+        padding: 0 40px;
     }
 
     .saludo {
@@ -179,10 +162,146 @@
     }
 
     .imgsobremi {
-        width: 100%;
+        width: 90%;
         height: auto;
         display: block;
         margin: 0 auto;
     }
 
+    .sobreMi {
+        flex-direction: column;
+        gap: 30px;
+        align-items: center;
+        padding: 0 40px;
+    }
+
+    .carta {
+        font-size: 1.2rem;
+        text-align: justify;
+    }
+}
+
+/* tablets */
+@media (max-width: 768px) {
+    .inicio {
+        height: 100vh; 
+        background-size: cover;
+    }
+
+    .info {
+        font-size: 16px;
+    }
+
+    .info p {
+        font-size: 1rem;
+        margin-top: 10px;
+        width: 100%;  
+        margin-left: 20px; 
+    }
+
+    .subtitulo {
+        font-size: 1.4rem; 
+        width: 100%;
+        margin-left: 30px;  
+    }
+
+    .tratamientos {
+        flex-direction: column; 
+        margin-top: 30px;
+        margin-left: 30px; 
+    }
+
+    .link {
+        margin-left: 190px;
+        padding: 12px;
+    }
+
+
+    .pregunta {
+        font-size: 1.8rem; 
+        margin-top: 60px;
+        width: 100%;
+        margin-left: 30px; 
+    }
+
+    .saludo {
+        font-size: 2rem;
+        width: 100%;  
+    }
+
+    .imgsobremi {
+        width: 100%; 
+        height: auto;
+        display: block;
+        margin-left: 20px; 
+    }
+
+    .sobreMi {
+        flex-direction: column; 
+        gap: 20px;
+        margin-left: 30px; 
+        width: 100%; 
+    }
+}
+
+/* Móvil*/
+@media (max-width: 480px) {
+    .inicio {
+        height: 100vh; 
+        background-size: cover; 
+        width: 100%;
+    }
+
+    .info p {
+        font-size: 1rem;
+        margin-top: 10px;
+        width: 100%;
+        margin-left: 120px;
+    }
+
+    .subtitulo {
+        font-size: 1.2rem;
+        width: 100%;
+        margin-left: 120px;
+    }
+
+    .tratamientos {
+        flex-direction: column; 
+        margin-top: 30px;
+        padding: 10px;
+    }
+
+    .link {
+        margin: 15px auto;
+        padding: 10px;
+        margin-left:70px;
+        width: 100%;
+    }
+
+    .pregunta {
+        font-size: 1.8rem; 
+        margin-top: 60px;
+        width: 100%;
+        margin-left:120px;
+    }
+
+    .saludo {
+        font-size: 2rem; 
+        width: 100%;
+
+    }
+
+    .imgsobremi {
+        width: 100%; 
+        height: auto;
+        display: block;
+        margin-left: 0px;
+    }
+
+    .sobreMi {
+        flex-direction: column; 
+        gap: 20px;
+        margin-left: 120px;
+        width: 100%; 
+    }
 }
