--- a/src/styles/NavBar.module.css
+++ b/src/styles/NavBar.module.css
@@ -9,12 +9,17 @@
     margin-left: -20px;
 }
 
+.navbarHide {
+    display: none;
+}
+
 .burger {
     display: none;
     flex-direction: column;
     cursor: pointer;
     height: fit-content;
 }
+
 
 .line {
     width: 30px;
@@ -61,10 +66,10 @@ h2 {
 h3,
 .login a {
     color: #575757;
-    ;
     font-size: 1.1rem;
     text-decoration: none;
     align-items: center;
+    text-align: center;
 }
 
 .banner {
@@ -171,6 +176,10 @@ h3,
         width: 800px;
     }
 
+    .navbarHide {
+        display: none;
+    }
+
     h1 {
         width: 700px;
         font-size: 3.8rem;
@@ -201,7 +210,8 @@ h3,
         right: 15%;
     }
 
-    .container {
+    .container,
+    .links {
         width: 500px;
     }
 }
@@ -209,7 +219,25 @@ h3,
 @media (max-width: 768px) {
     .burger {
         display: flex;
-       
+        position: relative;
+        left: -15%;
+    }
+
+    .navbarHide {
+        display: none;
+    }
+
+    .toggle {
+        position: relative;
+        right: 120px;
+        height: fit-content;
+    }
+
+    .lineToggle {
+        width: 30px;
+        height: 3px;
+        background-color: #575757;
+        margin: 6.5px 0;
     }
 
     .navbar {
@@ -221,36 +249,52 @@ h3,
     .links {
         flex-direction: column;
         position: relative;
-        top: 120%;
+        top: 0;
         right: 3%;
         align-items: end;
-        
+        margin: 0;
+        margin-top: 5%;
+        margin-right: 5%;
+
     }
 
     .links a {
         padding: 0;
-        margin-bottom: 8%;
+        margin-bottom: 3%;
         margin-right: 5px;
     }
 
     .logo {
         position: relative;
-        left: -35%;
+        left: 65%;
+        bottom: 20%;
+
+    }
+
+    .toggleLogo {
+        width: 140px;
+        height: 140px;
+        position: relative;
+        left: 16%;
+        bottom: -18%;
     }
 
     h1 {
         font-size: 3rem;
-        text-align: left;
+        text-align: center;
         position: absolute;
-        left: 53%;
-
+        top: 50%;
+        left: 33%;
+        width: 400px;
+        margin: 0
     }
 
     h2 {
         font-family: 2rem;
-        text-align: left;
+        text-align: center;
         position: absolute;
+        top: 65%;
         left: 35%;
-        margin-top: 40px;
+        margin: 0;
     }
 }
