--- a/src/styles/Footer.module.css
+++ b/src/styles/Footer.module.css
@@ -49,13 +49,27 @@
     }
 }
 
-/* móvil */
 @media (max-width: 480px) {
-    .contactoInfoRedes {
-        flex-direction: column;  
-        gap: 15px;  
-        align-items: center;  
-        justify-content: center; 
-        margin-left: 120px;
+    .contenedorprincipal {
+        flex-direction: column;
+        align-items: center;
+        text-align: center;
+    }
+
+    .contacto,
+    .informacion,
+    .siguenos {
+        width: 100%;
+        align-items: center;
+        text-align: center;
+    }
+
+    .styles_mail,
+    .styles_telefono,
+    .styles_direccion,
+    .styles_horario {
+        justify-content: center;
+        text-align: center;
+        flex-wrap: wrap; 
     }
 }
