--- a/src/styles/NavBar.module.css
+++ b/src/styles/NavBar.module.css
@@ -1,14 +1,14 @@
+
 .navbar {
     height: 100px;
-    width: 1400px;
+    width: 100%;
     display: flex;
     justify-content: center;
     position: absolute;
     padding-top: 20px;
     gap: 35px;
-    margin-left: -50px;
-
-}
+    justify-content: flex-start;
+}*
 
 .navbarHide {
     display: none;
@@ -31,7 +31,7 @@
 
 .login {
     height: 100px;
-    width: 1300px;
+    width: 100%;
     display: flex;
     justify-content: center;
     position: absolute;
@@ -88,6 +88,8 @@ h3,
     }
 }
 
+
+
 @keyframes moveLeft {
     0% {
         transform: translateX(100%);
@@ -127,12 +129,17 @@ h3,
 }
 
 .logo {
-    width: 190px;
-    height: 190px;
+    max-width:200%;
+    max-height: 200%;
+    height: auto;
+    width: auto;
+    display: block;
+    margin: 0 auto; 
 }
 
+
 /*container logo y links*/
-.container,
+.containerlogo,
 .links {
     display: flex;
     justify-content: center;
@@ -170,6 +177,7 @@ h3,
     justify-content: center;
     align-items: center;
 }
+
 
 @media (max-width: 1024px) {
     .navbar {
