--- a/src/styles/NavBar.module.css
+++ b/src/styles/NavBar.module.css
@@ -1,14 +1,15 @@
 
 .navbar {
     height: 100px;
-    width: 100%;
+    width: 1400px;
     display: flex;
     justify-content: center;
     position: absolute;
     padding-top: 20px;
     gap: 35px;
-    justify-content: flex-start;
-}*
+    margin-left: -50px;
+
+}
 
 .navbarHide {
     display: none;
@@ -128,18 +129,26 @@ h3,
     align-items: center;
 }
 
+
 .logo {
-    max-width:200%;
-    max-height: 200%;
-    height: auto;
-    width: auto;
-    display: block;
+    width: 150px; 
+    height: auto; 
+    display: block; 
     margin: 0 auto; 
+}
+
+/* Clase para el logo cuando toggle está activo */
+.toggleLogo {
+    width: 150px; 
+    height: auto;
+    display: block;
+    margin: 0 auto;
 }
 
 
 /*container logo y links*/
-.containerlogo,
+
+.container,
 .links {
     display: flex;
     justify-content: center;
@@ -178,27 +187,30 @@ h3,
     align-items: center;
 }
 
-
+/*PANTALLAS PEQUEÑAS*/
 @media (max-width: 1024px) {
     .navbar {
-        font-size: .2rem;
-        width: 800px;
+        font-size: 0.65rem;
+        width: 100%;
+        justify-content: center;
+        width: 100%;
     }
+
 
     .navbarHide {
         display: none;
     }
 
     h1 {
-        width: 700px;
-        font-size: 3.8rem;
-        margin-top: 5%;
+        font-size: 3.8rem; 
+        top: 20%;  
     }
 
     h2 {
         font-size: 2.3rem;
-        margin-top: 10%;
+        top: 27%; 
     }
+
 
     .navbar a,
     h3,
@@ -213,17 +225,35 @@ h3,
     }
 
     .logo {
-        width: 140px;
-        height: 140px;
-        position: relative;
-        right: 15%;
+        width: 110px; 
+        height: auto; 
+        display: block; 
+        margin-left: 35px;
+
+    }
+    .containerlinks{
+        display: flex;
+        justify-content: center
     }
 
-    .container,
-    .links {
-        width: 500px;
+    .containerlogo {
+        display: flex;
+        justify-content: center; 
+        align-items: center; 
+        margin-left: 0; 
+        width: 100%; 
+        padding: 0 20px; 
     }
+
+    .regalaTova{
+        width: 100%;
+    }
+
 }
+
+
+
+/*TABLETS*/
 
 @media (max-width: 768px) {
     .burger {
