--- a/src/styles/Footer.module.css
+++ b/src/styles/Footer.module.css
@@ -47,6 +47,9 @@
         flex-direction: column; 
         gap: 15px;
     }
+    .contenedorprincipal {
+        margin-top: 450px; 
+    }
 }
 
 @media (max-width: 480px) {
