--- a/src/styles/NavBar.module.css
+++ b/src/styles/NavBar.module.css
@@ -15,6 +15,11 @@
     display: none;
 }
 
+.toggle {
+    display: none; /* Oculta el contenido del menú */
+}
+
+
 .burger {
     display: none;
     flex-direction: column;
@@ -187,7 +192,7 @@ h3,
     align-items: center;
 }
 
-/*PANTALLAS PEQUEÑAS*/
+/*1024*/
 @media (max-width: 1024px) {
     .navbar {
         font-size: 0.65rem;
@@ -200,6 +205,7 @@ h3,
     .navbarHide {
         display: none;
     }
+
 
     h1 {
         font-size: 3.8rem; 
@@ -248,98 +254,114 @@ h3,
     .regalaTova{
         width: 100%;
     }
-
 }
 
 
 
-/*TABLETS*/
-
+/*768*/
 @media (max-width: 768px) {
-    .burger {
-        display: flex;
-        position: relative;
-        left: 6%;
+    .navbar {
+        font-size: 0.35rem;
+        width: 100%;
+        justify-content: center;
+        padding: 0;
+        margin-left: 80px;
     }
 
     .navbarHide {
-        display: none;
+        display: none; 
     }
 
-    .toggle {
-        position: relative;
-        right: -20px;
-        height: fit-content;
+    .burger {
+        display: flex;
+        flex-direction: column;
+        cursor: pointer;
+        position: absolute;
+        top: 20px; 
+        right: 20px;
+        gap: 5px;
     }
 
-    .lineToggle {
+    .line {
         width: 30px;
         height: 3px;
         background-color: #575757;
-        margin: 6.5px 0;
+        margin: 3px 0;
     }
 
-    .navbar {
-        font-size: .2rem;
-        width: 700px;
-        height: fit-content;
-    }
-
-    .links {
-        flex-direction: column;
+    .containerlogo {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        margin-left: 0;
+        width: 100%;
+        padding: 0 20px;
         position: relative;
-        top: 0;
-        right: -25%;
-        align-items: end;
-        margin: 0;
-        margin-top: 5%;
-        margin-right: 5%;
-
-    }
-
-    .links a {
-        padding: 0;
-        margin-bottom: 3%;
-        margin-right: 5px;
     }
 
     .logo {
-        position: relative;
-        left: 156%;
-        bottom: 20%;
-
+        width: 110px;
+        height: auto;
+        display: block;
+        margin-left: 35px;
     }
 
     .toggleLogo {
-        width: 140px;
-        height: 140px;
-        position: relative;
-        left: 40%;
-        bottom: -18%;
+        width: 110px;
+        height: auto;
+        display: block;
+        margin: 0 auto;
+    }
+    .regalaTova{
+        width: 50%;
+    }
+
+    .containerlinks {
+        display: flex;
+        justify-content: center;
+        flex-wrap: wrap;
+        width: 100%;
+        margin-right: 100px;
+    }
+
+    .links {
+        display: flex;
+        gap: 10px;
+        flex-direction: column;
+        align-items: center;
+        width: 100%;
+        margin-top: 20px;
     }
 
     h1 {
-        font-size: 3rem;
-        text-align: center;
-        position: absolute;
-        top: 50%;
-        left: 33%;
-        width: 400px;
-        margin: 0
+        font-size: 3.8rem;
+        top: 25%; 
+        left: 250px;
     }
 
     h2 {
-        font-family: 2rem;
-        text-align: center;
-        position: absolute;
-        top: 65%;
-        left: 35%;
-        margin: 0;
+        font-size: 2.3rem;
+        top: 34%; 
+        left: 250px; 
+    }
+
+
+}    
+
+/*480*/
+@media (max-width: 480px) {
+    h1 {
+        font-size: 3.2rem; 
+        top: 39%;  
+        left: 170px;
+    }
+
+    h2 {
+        font-size: 2rem;
+        top: 55%; 
+        left: 170px;
+    }
+    .regalaTova{
+        width: 70%;
     }
 }
-
-
-
-
-
-
