--- a/src/styles/ReservarOnline.module.css
+++ b/src/styles/ReservarOnline.module.css
@@ -99,3 +99,34 @@ label {
 .calendario {
     margin-left: 5px;
 }
+
+/*móviles*/
+@media (max-width: 480px) {
+    .form {
+    margin-top: 20px;
+    padding: 1rem;
+    flex-direction: column;
+    }
+
+    form {
+    width: 80%;
+    padding: 1rem;
+    }
+
+    form input,
+    form select,
+    form textarea {
+    width: 100%;
+    }
+
+    .nombre,
+    .telefono,
+    .observaciones,
+    .servicios {
+    width: 100%;
+    }
+
+}
+
+
+
