--- a/src/styles/AppointmentsButton.module.css
+++ b/src/styles/AppointmentsButton.module.css
@@ -9,3 +9,29 @@
 .icon{
     font-size: 50px
 }
+
+/* tablets */
+@media (max-width: 768px) {
+    .AppoimentsButton {
+        margin: 0 auto; 
+        display: block;
+    }
+}
+
+
+/* móviles*/
+@media (max-width: 480px) {
+    .AppoimentsButton {
+        margin: 0;
+        display: block;
+    }
+
+    .containerAppoint {
+        display: flex;
+        justify-content: flex-end; /* A la derecha */
+        width: 100%;
+        padding-right: 20px; /* Opcional: margen con el borde */
+    }
+}
+
+
