--- a/src/styles/Logout.module.css
+++ b/src/styles/Logout.module.css
@@ -30,19 +30,18 @@
     }
 }
 
-/*móviles*/
-@media (max-width: 480px) {
+
+/* teablets */
+@media (max-width: 768px) {
     .buttonlogout {
         position: absolute;
-        top: 200px;
-        width: 40px; 
-        height: 35px; 
+        top: 340px; 
+        left: 265px;
     }
 
     .icon {
-        font-size: 30px; 
+        font-size: 40px; 
     }
 }
-
 
 
