--- a/src/styles/NewButton.module.css
+++ b/src/styles/NewButton.module.css
@@ -21,25 +21,11 @@
 @media (max-width: 768px) {
     .newbutton {
         position: absolute;
-        top: 230px;
+        top: 280px;
+        left: 265px;
     }
 
     .icon {
         font-size: 30px; 
-    }
-}
-
-/*móviles*/
-
-@media (max-width: 480px) {
-    .newbutton {
-        position: absolute;
-        top: 230px;
-        width: 40px; 
-        height:40px; 
-    }
-
-    .icon {
-        font-size: 35px;
     }
 }
