--- a/src/styles/AcmellaOleracea.module.css
+++ b/src/styles/AcmellaOleracea.module.css
@@ -4,12 +4,14 @@
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
-    height: 15cm;
-    width: 100%;
+    height: 20cm;
+    width: 75vw;
     display: flex;
-    align-items: center;
+    flex-direction: column;
+    align-items: flex-start;
+    padding: 0;
+    margin: 0;
 }
-
 /*botón reserva*/
 .boton{
     background: #D8C7B9;
@@ -54,6 +56,14 @@
     color: #7d7b7c;
     font-size: 35px;
     font-weight: bold;
+}
+
+@media (max-width: 1440px) {
+    .titulo {
+        height: 15cm;
+        background-size: cover;
+        width: 100%;
+    }
 }
 
 @media (max-width: 1024px) {
