--- a/src/styles/Appointments.module.css
+++ b/src/styles/Appointments.module.css
@@ -4,11 +4,13 @@
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
-    height: 15cm;
-    width: 100%;
+    height: 20cm;
+    width: 75vw;
     display: flex;
-    align-items: center;
-    justify-content: center;
+    flex-direction: column;
+    align-items: flex-start;
+    padding: 0;
+    margin: 0;
 }
 /*contenedor calendario*/
 .contenedor{
