--- a/src/styles/Inicio.module.css
+++ b/src/styles/Inicio.module.css
@@ -5,9 +5,13 @@
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
-    height: 15cm;
-    width: 100%;
-    overflow-x: hidden;
+    height: 100vh;
+    width: 75vw;
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    padding: 0;
+    margin: 0;
 }
 
 
@@ -114,6 +118,13 @@
 }
 
 
+@media (max-width: 1440px) {
+    .inicio {
+        height: 15cm;
+        background-size: cover;
+        width: 100%;
+    }
+}
 
 
 @media (max-width: 1024px) {
@@ -136,7 +147,6 @@
         padding: 0 40px; 
         width: 100%;
         text-align: center; 
-        margin-left: auto;
         margin-right: auto;
     }
 
