--- a/src/styles/Login.module.css
+++ b/src/styles/Login.module.css
@@ -4,8 +4,13 @@
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
-    height: 15cm;
-    width: 100%;
+    height: 20cm;
+    width: 75vw;
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    padding: 0;
+    margin: 0;
 }
 
 .form{
@@ -75,6 +80,15 @@
     position: absolute;
     top: 140%;
 }
+
+@media (max-width: 1440px) {
+    .inicio {
+        height: 15cm;
+        background-size: cover;
+        width: 100%;
+    }
+}
+
 
 /*tablets*/
 @media (max-width: 768px) {
