--- a/src/styles/RegalaTova.module.css
+++ b/src/styles/RegalaTova.module.css
@@ -5,8 +5,13 @@
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
-    height: 15cm;
-    width: 100%;
+    height: 20cm;
+    width: 75vw;
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    padding: 0;
+    margin: 0;
 }
 
 /*subtitulo debajo imagen*/
@@ -100,6 +105,14 @@ form {
 
 .stripebuybutton{
     border: 1px solid #ccc;
+}
+
+@media (max-width: 1440px) {
+    .regala {
+        height: 15cm;
+        background-size: cover;
+        width: 100%;
+    }
 }
 
 
