--- a/src/styles/Register.module.css
+++ b/src/styles/Register.module.css
@@ -4,9 +4,15 @@
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
-    height: 15cm;
-    width: 100%;
+    height: 20cm;
+    width: 75vw;
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    padding: 0;
+    margin: 0;
 }
+
 .subtitulo{
     font-size: 25px;
 }
