--- a/src/styles/ReservarOnline.module.css
+++ b/src/styles/ReservarOnline.module.css
@@ -4,11 +4,13 @@
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
-    height: 15cm;
-    width: 100%;
+    height: 20cm;
+    width: 75vw;
     display: flex;
-    align-items: center;
-    justify-content: center;
+    flex-direction: column;
+    align-items: flex-start;
+    padding: 0;
+    margin: 0;
 }
 
 
@@ -99,6 +101,15 @@ label {
 .calendario {
     margin-left: 5px;
 }
+
+@media (max-width: 1440px) {
+    .reserva {
+        height: 15cm;
+        background-size: cover;
+        width: 100%;
+    }
+}
+
 
 /*móviles*/
 @media (max-width: 480px) {
