--- a/src/index.css
+++ b/src/index.css
@@ -56,7 +56,19 @@ p, a, span,h3 {
 }
 
 
-/*tablet
+@media (max-width: 1024px) {
+  h1 {
+      font-size: 2.5rem;
+      text-align: center;
+  }
+
+  h2 {
+      font-size: 1.4rem;
+      text-align: center;
+  }
+}
+
+/*tablet*/
 @media (max-width: 768px) {
   h1 {
       font-size: 2.5rem;
@@ -67,4 +79,4 @@ p, a, span,h3 {
       font-size: 1.4rem;
       text-align: center;
   }
-}*/
+}
