--- a/src/styles/Inicio.module.css
+++ b/src/styles/Inicio.module.css
@@ -9,7 +9,7 @@
     width: 75vw;
     display: flex;
     flex-direction: column;
-    align-items: flex-start;
+    align-items: center;
     padding: 0;
     margin: 0;
 }
