--- a/src/styles/AppointmentsButton.module.css
+++ b/src/styles/AppointmentsButton.module.css
@@ -1,39 +1,36 @@
 .AppoimentsButton{
-    margin-right: 150px;
-    padding: 0;
-    background-color: transparent;
-    box-shadow: none;
-    margin-top: 10px;
+    background-color: #7A7A7A;
+    color: #F4F0EB;
+    position: relative;
+    left: 155px;
+    width: 40px;
+    height: 40px;
+    padding: 0px;
 }
 
 .icon{
-    font-size: 50px
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    font-size: 35px;
+    color: #f1e4d4;
 }
 
 
-/* tablets */
+
+
 @media (max-width: 768px) {
     .AppoimentsButton {
-        position: absolute;
-        top:200px;
-        left: 260px;
+        position: static;
+        left: auto;
+        top: auto;
+        width: 40px;
+        height: 40px;
+        margin-bottom: 10px;
+    }
 
+    .icon {
+        font-size: 30px;
     }
 }
 
-/* móviles*/
-@media (max-width: 480px) {
-    .AppoimentsButton {
-        position: absolute;
-        top: 200px;
-        left: 125px;
-        
-    }
-
-    .containerAppoint {
-        display: flex;
-        justify-content: flex-end; 
-        width: 100%;
-        padding-right: 20px;
-    }
-}
