--- a/src/styles/Logout.module.css
+++ b/src/styles/Logout.module.css
@@ -1,61 +1,34 @@
 /*contenedor logout*/
 .buttonlogout {
+    background-color: #7A7A7A;
+    color: #F4F0EB;
     position: relative;
-    left: 170px;
-    top: 7px;
-    width: 50px;
+    left: 155px;
+    width: 40px;
     height: 40px;
-    padding: 0px;
-    margin: 0;
-    text-align: center; 
-    background-color: transparent;
-    box-shadow: none;  
+    padding: 0px;  
 }
 
 /*icono logout*/
 .icon{
-    font-size: 50px
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    font-size: 35px;
+    color: #f1e4d4;
 }
 
-/* teablets */
 @media (max-width: 768px) {
-    .buttonlogout {
-        position: absolute;
-        top: 190px; 
-        right: 30px;
+    .buttonlogout{
+        position: static;
+        left: auto;
+        top: auto;
+        width: 40px;
+        height: 40px;
+        margin-bottom: 10px;
     }
 
     .icon {
-        font-size: 40px; 
-    }
-}
-
-
-/* teablets */
-@media (max-width: 768px) {
-    .buttonlogout {
-        position: absolute;
-        top: 340px; 
-        left: 265px;
-    }
-
-    .icon {
-        font-size: 40px; 
-    }
-}
-
-
-/*móviles*/
-@media (max-width: 480px) {
-    .buttonlogout {
-        position: absolute;
-        top: 330px;
-        left: 137px;
-        width: 40px; 
-        height: 35px; 
-    }
-
-    .icon {
-        font-size: 30px; 
+        font-size: 30px;
     }
 }
