--- a/src/styles/RegalaTova.module.css
+++ b/src/styles/RegalaTova.module.css
@@ -6,7 +6,7 @@
     background-repeat: no-repeat;
     background-size: cover;
     height: 20cm;
-    width: 75vw;
+    width: 100%;
     display: flex;
     flex-direction: column;
     align-items: flex-start;
